correct some labelings

--- a/plant_height_vegetative.ipynb
+++ b/plant_height_vegetative.ipynb
@@ -2835,7 +2835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "a7d3cc37-e28f-468b-9574-a635a48910dd",
    "metadata": {},
    "outputs": [
@@ -2860,8 +2860,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>mean_life_exp</th>\n",
-       "      <th>median_life_exp</th>\n",
+       "      <th>mean_height_max_m</th>\n",
+       "      <th>median_height_max_m</th>\n",
        "      <th>references</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2944,19 +2944,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                         mean_life_exp  median_life_exp  \\\n",
-       "AccSpeciesName                                            \n",
-       "aegle marmelos               10.000000        10.000000   \n",
-       "aesculus hippocastanum       25.656250        25.000000   \n",
-       "angophora floribunda         16.400000        20.000000   \n",
-       "aquilaria sinensis           28.000000        28.000000   \n",
-       "avellara fistulosa            0.400000         0.400000   \n",
-       "...                                ...              ...   \n",
-       "helwingia omeiensis           8.000000         8.000000   \n",
-       "heritiera fomes              25.000000        25.000000   \n",
-       "heritiera littoralis         14.000000        16.000000   \n",
-       "heteromeles arbutifolia       6.119083         5.726333   \n",
-       "hevea brasiliensis           14.287059        13.100000   \n",
+       "                         mean_height_max_m  median_height_max_m  \\\n",
+       "AccSpeciesName                                                    \n",
+       "aegle marmelos                   10.000000            10.000000   \n",
+       "aesculus hippocastanum           25.656250            25.000000   \n",
+       "angophora floribunda             16.400000            20.000000   \n",
+       "aquilaria sinensis               28.000000            28.000000   \n",
+       "avellara fistulosa                0.400000             0.400000   \n",
+       "...                                    ...                  ...   \n",
+       "helwingia omeiensis               8.000000             8.000000   \n",
+       "heritiera fomes                  25.000000            25.000000   \n",
+       "heritiera littoralis             14.000000            16.000000   \n",
+       "heteromeles arbutifolia           6.119083             5.726333   \n",
+       "hevea brasiliensis               14.287059            13.100000   \n",
        "\n",
        "                                                                references  \n",
        "AccSpeciesName                                                              \n",
@@ -2975,15 +2975,15 @@
        "[199 rows x 3 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_grouped = df_trait_id_non_nan.groupby(\"AccSpeciesName\").agg(\n",
-    "    mean_life_exp=(\"StdValue\", \"mean\"),\n",
-    "    median_life_exp=(\"StdValue\", \"median\"),\n",
+    "    mean_height_max_m=(\"StdValue\", \"mean\"),\n",
+    "    median_height_max_m=(\"StdValue\", \"median\"),\n",
     "    references=(\"Reference\", lambda x: \"; \".join(x.dropna().unique()))\n",
     ")\n",
     "df_grouped"
@@ -2991,7 +2991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "5087d8bd-dc40-4d07-afef-c78bbe174b88",
    "metadata": {},
    "outputs": [],
