--- a/plant_height_vegetative.ipynb
+++ b/plant_height_vegetative.ipynb
@@ -2835,7 +2835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "a7d3cc37-e28f-468b-9574-a635a48910dd",
    "metadata": {},
    "outputs": [
@@ -2860,44 +2860,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>AccSpeciesName</th>\n",
        "      <th>mean_height_max_m</th>\n",
        "      <th>median_height_max_m</th>\n",
        "      <th>references</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AccSpeciesName</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>aegle marmelos</th>\n",
+       "      <th>0</th>\n",
+       "      <td>aegle marmelos</td>\n",
        "      <td>10.000000</td>\n",
        "      <td>10.000000</td>\n",
        "      <td>Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>aesculus hippocastanum</th>\n",
+       "      <th>1</th>\n",
+       "      <td>aesculus hippocastanum</td>\n",
        "      <td>25.656250</td>\n",
        "      <td>25.000000</td>\n",
        "      <td>Cornelissen, J. H. C. 1996. An experimental co...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>angophora floribunda</th>\n",
+       "      <th>2</th>\n",
+       "      <td>angophora floribunda</td>\n",
        "      <td>16.400000</td>\n",
        "      <td>20.000000</td>\n",
        "      <td>Fonseca, C. R., J. M. Overton, B. Collins, and...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>aquilaria sinensis</th>\n",
+       "      <th>3</th>\n",
+       "      <td>aquilaria sinensis</td>\n",
        "      <td>28.000000</td>\n",
        "      <td>28.000000</td>\n",
        "      <td>Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>avellara fistulosa</th>\n",
+       "      <th>4</th>\n",
+       "      <td>avellara fistulosa</td>\n",
        "      <td>0.400000</td>\n",
        "      <td>0.400000</td>\n",
        "      <td>Schweingruber, F.H., Landolt, W.: The Xylem Da...</td>\n",
@@ -2907,81 +2907,85 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>helwingia omeiensis</th>\n",
+       "      <th>194</th>\n",
+       "      <td>helwingia omeiensis</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>heritiera fomes</th>\n",
+       "      <th>195</th>\n",
+       "      <td>heritiera fomes</td>\n",
        "      <td>25.000000</td>\n",
        "      <td>25.000000</td>\n",
        "      <td>unpub.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>heritiera littoralis</th>\n",
+       "      <th>196</th>\n",
+       "      <td>heritiera littoralis</td>\n",
        "      <td>14.000000</td>\n",
        "      <td>16.000000</td>\n",
        "      <td>Kirkup, D., P. Malcolm, G. Christian, and A. P...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>heteromeles arbutifolia</th>\n",
+       "      <th>197</th>\n",
+       "      <td>heteromeles arbutifolia</td>\n",
        "      <td>6.119083</td>\n",
        "      <td>5.726333</td>\n",
        "      <td>Preston, K. A., W. K. Cornwell, and J. L. DeNo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>hevea brasiliensis</th>\n",
+       "      <th>198</th>\n",
+       "      <td>hevea brasiliensis</td>\n",
        "      <td>14.287059</td>\n",
        "      <td>13.100000</td>\n",
        "      <td>Fyllas, N. M., S. Patino, T. R. Baker, G. Biel...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>199 rows × 3 columns</p>\n",
+       "<p>199 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         mean_height_max_m  median_height_max_m  \\\n",
-       "AccSpeciesName                                                    \n",
-       "aegle marmelos                   10.000000            10.000000   \n",
-       "aesculus hippocastanum           25.656250            25.000000   \n",
-       "angophora floribunda             16.400000            20.000000   \n",
-       "aquilaria sinensis               28.000000            28.000000   \n",
-       "avellara fistulosa                0.400000             0.400000   \n",
-       "...                                    ...                  ...   \n",
-       "helwingia omeiensis               8.000000             8.000000   \n",
-       "heritiera fomes                  25.000000            25.000000   \n",
-       "heritiera littoralis             14.000000            16.000000   \n",
-       "heteromeles arbutifolia           6.119083             5.726333   \n",
-       "hevea brasiliensis               14.287059            13.100000   \n",
+       "              AccSpeciesName  mean_height_max_m  median_height_max_m  \\\n",
+       "0             aegle marmelos          10.000000            10.000000   \n",
+       "1     aesculus hippocastanum          25.656250            25.000000   \n",
+       "2       angophora floribunda          16.400000            20.000000   \n",
+       "3         aquilaria sinensis          28.000000            28.000000   \n",
+       "4         avellara fistulosa           0.400000             0.400000   \n",
+       "..                       ...                ...                  ...   \n",
+       "194      helwingia omeiensis           8.000000             8.000000   \n",
+       "195          heritiera fomes          25.000000            25.000000   \n",
+       "196     heritiera littoralis          14.000000            16.000000   \n",
+       "197  heteromeles arbutifolia           6.119083             5.726333   \n",
+       "198       hevea brasiliensis          14.287059            13.100000   \n",
        "\n",
-       "                                                                references  \n",
-       "AccSpeciesName                                                              \n",
-       "aegle marmelos           Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...  \n",
-       "aesculus hippocastanum   Cornelissen, J. H. C. 1996. An experimental co...  \n",
-       "angophora floribunda     Fonseca, C. R., J. M. Overton, B. Collins, and...  \n",
-       "aquilaria sinensis       Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...  \n",
-       "avellara fistulosa       Schweingruber, F.H., Landolt, W.: The Xylem Da...  \n",
-       "...                                                                    ...  \n",
-       "helwingia omeiensis      Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...  \n",
-       "heritiera fomes                                                     unpub.  \n",
-       "heritiera littoralis     Kirkup, D., P. Malcolm, G. Christian, and A. P...  \n",
-       "heteromeles arbutifolia  Preston, K. A., W. K. Cornwell, and J. L. DeNo...  \n",
-       "hevea brasiliensis       Fyllas, N. M., S. Patino, T. R. Baker, G. Biel...  \n",
+       "                                            references  \n",
+       "0    Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...  \n",
+       "1    Cornelissen, J. H. C. 1996. An experimental co...  \n",
+       "2    Fonseca, C. R., J. M. Overton, B. Collins, and...  \n",
+       "3    Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...  \n",
+       "4    Schweingruber, F.H., Landolt, W.: The Xylem Da...  \n",
+       "..                                                 ...  \n",
+       "194  Zheng, W. 1983. Silva Sinica: Volume 1-4. Chin...  \n",
+       "195                                             unpub.  \n",
+       "196  Kirkup, D., P. Malcolm, G. Christian, and A. P...  \n",
+       "197  Preston, K. A., W. K. Cornwell, and J. L. DeNo...  \n",
+       "198  Fyllas, N. M., S. Patino, T. R. Baker, G. Biel...  \n",
        "\n",
-       "[199 rows x 3 columns]"
+       "[199 rows x 4 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_grouped = df_trait_id_non_nan.groupby(\"AccSpeciesName\").agg(\n",
+    "df_grouped = df_trait_id_non_nan.groupby(\"AccSpeciesName\",as_index=False).agg(\n",
     "    mean_height_max_m=(\"StdValue\", \"mean\"),\n",
     "    median_height_max_m=(\"StdValue\", \"median\"),\n",
     "    references=(\"Reference\", lambda x: \"; \".join(x.dropna().unique()))\n",
@@ -2991,7 +2995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "5087d8bd-dc40-4d07-afef-c78bbe174b88",
    "metadata": {},
    "outputs": [],
