--- a/plant_height.ipynb
+++ b/plant_height.ipynb
@@ -1691,12 +1691,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "13ea2724-c7d1-47ae-b6f2-0f053adc7d0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_trait_id_non_nan.to_csv(\"cleaned_plant_height.csv\", index=False)"
+    "df_grouped.to_csv(\"cleaned_plant_height.csv\", index=False)"
    ]
   },
   {
