--- a/plant_height_vegetative.ipynb
+++ b/plant_height_vegetative.ipynb
@@ -2995,12 +2995,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "5087d8bd-dc40-4d07-afef-c78bbe174b88",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_trait_id_non_nan.to_csv(\"cleaned_plant_height_vegetative.csv\", index=False)"
+    "df_grouped.to_csv(\"cleaned_plant_height_vegetative.csv\", index=False)"
    ]
   },
   {
